--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,19 @@
 :root {
+    --orange: #FDA037;
+    --navy: #15162E;
+    --white: #FFFFFF;
+    
+}
+
+html {
+    background-color: var(--navy);
+    
 
 }
 
-
 body {
     box-sizing: border-box;
+    color: var(--white);
 }
 
 header, main, footer {
@@ -25,7 +34,20 @@ h1, h2, h3 {
 
 
 
+#skip {
+    position:absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
 
+#skip:focus{
+    position: static;
+    width: auto;
+    height: auto;
+}
 
 
 
