--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,6 @@
 
 html {
     background-color: var(--navy);
-    
-
 }
 
 body {
@@ -23,15 +21,57 @@ header, main, footer {
     margin: 0 auto;
 }
 
+header img {
+    width: 100%;
+    height:  300px;
+    position: relative;
+    margin-top: 0px;
+}
+
+#header-content {
+    margin-top: 0;
+    position: absolute;
+    top: 20px;
+    text-align: center;
+}
+
+nav ul li {
+    margin-left: 30px;
+    margin-top:-30px;
+    margin-bottom: 50px;
+    padding: 10px;
+    text-align: left;
+}
+
+ul li {
+    list-style: none;
+}
+
+li a {
+    color: var(--navy);
+    text-decoration: none;
+    font-size: 15px;
+    padding: 10px;
+    background-color: var(--orange);
+    font-family: "DM Sans", sans-serif;
+    font-weight: bold;
+    border-radius: 5px;
+    box-shadow: 2px 3px 10px #15162E;
+    text-transform: uppercase;
+}
+
+h1 {
+    font-family: "Lalezar", serif;
+    text-transform: uppercase;
+    font-size: 50px;
+    margin-left: 80px;
+    text-shadow: 2px 2px 2px #15162E;
+}
 /*-----HEADINGS-----*/
 h1, h2, h3 {
     text-align: center;
     font-weight: bold;
 }
-
-
-
-
 
 
 #skip {
@@ -49,8 +89,6 @@ h1, h2, h3 {
     height: auto;
 }
 
-
-
 .sr-only {
     position:absolute;
     left: -10000px;
@@ -61,9 +99,35 @@ h1, h2, h3 {
 }
 
 #albums img {
-    width: 400px;
-    height: 400px;
+    width: 450px;
+    height: 450px;
     grid-row: 1/-1;
+    grid-column: 2/-1;
+    margin-top: 40px;
+    margin-left: 94px;
+}
+
+#albums h3 {
+    margin-left: 35px;
+    font-family: "Lalezar", serif;
+    font-size: 25px;
+   text-shadow:2px 2px 2px #15162E;
+}
+
+#albums h2 {
+    font-size: 35px;
+    color: var(--navy);
+    font-weight: bold;
+    font-family: "Lalezar", serif;
+}
+
+
+.tracklist {
+    margin-top: -40px;
+    margin-left: 70px;
+    font-family: "DM Sans", sans-serif;
+    font-size: 20px;
+    color: var(--navy);
 }
 
 #albums {
@@ -71,12 +135,13 @@ h1, h2, h3 {
     padding: 1rem;
     width: calc(100% - 2rem);
     max-width: 1200px;
+    margin-left: 5px;
 }
 
 #albums .currentItem {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 2fr;
+    grid-template-rows: 1fr 2fr 1fr;
     gap: 1rem;
 }
 
@@ -90,10 +155,17 @@ h1, h2, h3 {
     grid-template-columns: 1fr 1fr 1fr;
     gap: 1rem;
     width: fit-content;
-    margin: 2rem auto;
+    position: relative;
+    left: 40px;
+    top: -80px;
 }
 
-#albums h3 {
-    grid-column: 2/-1;
-    align-self: end;
+#btn1, #btn2, #btn3 {
+    background-color: var(--navy);
+    color: var(--white);
+    text-decoration: none;
+    padding: 10px;
+    font-family: "DM Sans", sans-serif;
+    font-size: 20px;
+    margin-right: 90px;
 }
