--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,15 @@
 :root {
     --orange: #FDA037;
+    --blue: #013CA2;
     --navy: #15162E;
     --white: #FFFFFF;
+    --section-color: rgba(253, 160, 55, 0.8);
+    --box-shadow: -5px 5px 5px var(--navy);
     
 }
 
 html {
-    background-color: var(--navy);
+    background-color:black;
 }
 
 body {
@@ -48,7 +51,7 @@ ul li {
 }
 
 li a {
-    color: var(--navy);
+    color: black;
     text-decoration: none;
     font-size: 15px;
     padding: 10px;
@@ -56,8 +59,13 @@ li a {
     font-family: "DM Sans", sans-serif;
     font-weight: bold;
     border-radius: 5px;
-    box-shadow: 2px 3px 10px #15162E;
+    box-shadow: -2px 3px 10px #15162E;
     text-transform: uppercase;
+}
+
+li a:hover {
+    box-shadow: -5px 5px 11px #15162E ;
+    font-size:16px;
 }
 
 h1 {
@@ -116,7 +124,7 @@ h1, h2, h3 {
 
 #albums h2 {
     font-size: 35px;
-    color: var(--navy);
+    color: black;
     font-weight: bold;
     font-family: "Lalezar", serif;
 }
@@ -127,12 +135,12 @@ h1, h2, h3 {
     margin-left: 70px;
     font-family: "DM Sans", sans-serif;
     font-size: 20px;
-    color: var(--navy);
+    color: black;
 }
 
 #albums {
-    background-color: var(--orange);
-    padding: 1rem;
+    background-color: var(--section-color);
+    padding: 1.5rem;
     width: calc(100% - 2rem);
     max-width: 1200px;
     margin-left: 5px;
@@ -161,11 +169,127 @@ h1, h2, h3 {
 }
 
 #btn1, #btn2, #btn3 {
-    background-color: var(--navy);
+    background-color: var(--blue);
     color: var(--white);
     text-decoration: none;
     padding: 10px;
     font-family: "DM Sans", sans-serif;
     font-size: 20px;
     margin-right: 90px;
+    box-shadow: var(--box-shadow);
+    border-radius: 7px;
+}
+
+#btn1:hover, #btn2:hover, #btn3:hover {
+    box-shadow: -10px 8px 10px #15162E;
+    font-size: 21px;
+}
+
+#game {
+    background-color: var(--blue);
+    padding-bottom: 2rem;
+    margin-top: 50px;
+}
+
+#game div {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap:  70px;
+    margin: 0 auto;
+    max-width: 1100px;
+}
+
+
+#game h2 {
+    grid-column: 1/-1;
+    font-size: 35px;
+    color:var(--white);
+    font-weight: bold;
+    font-family: "Lalezar", serif;
+    text-shadow:2px 2px 2px #15162E;
+}
+
+#game form {
+    grid-column: 1/2;
+    margin-top: 9em;
+}
+
+label, input {
+    display: block;
+}
+
+label {
+    font-family: "DM Sans", sans-serif;
+    font-size: 25px;
+}
+
+input {
+    width:  90%;
+    height:  50px;
+}
+
+input[type="submit"] {
+    width: 50%;
+    height: 30%;
+    margin-left: 100px;
+    margin-top: 20px;
+    background-color: var(--orange);
+    color: var(--navy);
+    text-decoration: none;
+    font-weight: bold;
+    padding: 10px;
+    font-family: "DM Sans", sans-serif;
+    font-size: 20px;
+    box-shadow: var(--box-shadow);
+    border-radius: 7px;
+}
+
+input[type="submit"]:hover {
+    box-shadow: -10px 8px 10px #15162E;
+    font-size: 21px;
+}
+#gameDisplay {
+    grid-column: 2/2;
+    grid-row: 2/4;
+}
+
+#gameDisplay h3 {
+    font-family: "Lalezar", serif;
+    font-size: 35px;
+    text-shadow:2px 2px 2px #15162E;
+}
+
+
+#gameDisplay p {
+    font-family: "DM Sans", sans-serif;
+    font-size: 22px;
+}
+
+#game img {
+    width: 250px;
+    height: 250px;
+    margin-bottom: 10px;
+    margin-left: 8.5em;
+}
+
+
+.message {
+    display: none;
+    color: var(--orange);
+    font-weight: bold;
+    font-size: 20px;
+    margin-bottom: 10px;
+    
+}
+
+#gameOutput {
+    margin-left: 10em;
+    font-family: "DM Sans", sans-serif;
+    font-size: 20px;
+}
+
+footer {
+    text-align: center;
+    font-size: 18px;
+    font-family: "DM Sans", sans-serif;
 }
