--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@
     --blue: #013CA2;
     --navy: #15162E;
     --white: #FFFFFF;
-    --section-color: rgba(253, 160, 55, 0.8);
     --box-shadow: -5px 5px 5px var(--navy);
     
 }
@@ -106,6 +105,50 @@ h1, h2, h3 {
     overflow: hidden;
 }
 
+#tour h2 {
+    margin-top: 0;
+    grid-column: 1/-1;
+    font-size: 35px;
+    color:var(--white);
+    font-weight: bold;
+    font-family: "Lalezar", serif;
+    text-shadow:2px 2px 2px #15162E;
+}
+
+#tour {
+    display: grid;
+    grid-template-columns: 1fr 1fr;;
+}
+#tour ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+    font-family: "DM Sans", sans-serif;
+    column-gap: 10px;
+    margin-left: 10rem;
+}
+
+
+strong {
+    color: var(--orange);
+}
+
+#tour p {
+    grid-column: 1/-1;
+    text-align: center;
+    margin-top: -30px;
+    font-family: "DM Sans", sans-serif;
+    font-size: 18px;
+}
+
+#tour img {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    margin-left: 7rem;
+    padding-bottom: 50px;
+    padding-top: 20px;
+    width: 100%;
+}
+
 #albums img {
     width: 450px;
     height: 450px;
@@ -139,7 +182,7 @@ h1, h2, h3 {
 }
 
 #albums {
-    background-color: var(--section-color);
+    background-color: var(--orange);
     padding: 1.5rem;
     width: calc(100% - 2rem);
     max-width: 1200px;
@@ -186,7 +229,6 @@ h1, h2, h3 {
 
 
 #game {
-    background-color: var(--blue);
     padding-bottom: 2rem;
     margin-top: 50px;
 }
@@ -223,7 +265,7 @@ label {
     font-size: 25px;
 }
 
-input {
+input[type="number"] {
     width:  90%;
     height:  50px;
 }
@@ -272,20 +314,104 @@ input[type="submit"]:hover {
     margin-left: 8.5em;
 }
 
-
-.message {
-    display: none;
+#game span {
     color: var(--orange);
     font-weight: bold;
     font-size: 20px;
     margin-bottom: 10px;
-    
+}
+
+.message {
+    display: none;
 }
 
 #gameOutput {
-    margin-left: 10em;
+    margin-left: 6rem;
+    color: var(--white);
     font-family: "DM Sans", sans-serif;
     font-size: 20px;
+}
+
+#contact {
+    background-color: var(--blue);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-bottom: 100px;
+}
+
+#contact img {
+    margin-left: 10rem;
+    width: 300px;
+    height: 300px;
+    grid-column: 1/2;
+    margin-top: 50px;
+}
+
+#contact h2 {
+    grid-column: 1/-1;
+    text-align: center;
+    font-size: 35px;
+    color:var(--white);
+    font-weight: bold;
+    font-family: "Lalezar", serif;
+    text-shadow:2px 2px 2px #15162E;
+}
+
+#contact form {
+    grid-column: 2/3;
+    margin-top: 50px;
+    max-width: 500px;
+}
+
+#contact form input {
+    width: 100%;
+    height: 30px;
+    margin-bottom: 8px;
+}
+
+#contact label {
+    font-size: 20px;
+    margin-bottom: 8px;
+}
+ 
+#contact p {
+    color: var(--orange);
+    font-family: "DM Sans", sans-serif;
+    font-size: 20px;
+
+}
+
+.hidden {
+    display: none;
+}
+
+.required {
+    color: var(--orange);
+}
+
+
+fieldset {
+    width: 50%;
+    margin-top: 10px;
+}
+
+legend {
+    font-size: 20px;
+}
+label.radio {
+    display:grid;
+    grid-template-columns: min-content auto;
+    align-items: center;
+    column-gap: 10px;
+}
+
+
+.radio_input {
+    display: flex;
+}
+
+textarea {
+    width: 100%;
 }
 
 footer {
