--- a/styles.css
+++ b/styles.css
@@ -400,6 +400,7 @@ input[type="submit"]:hover {
     border: 2px solid #FDA037;
 }
 
+
 #contact label {
     font-size: 20px;
     margin-bottom: 8px;
@@ -430,6 +431,7 @@ input[type="submit"]:hover {
 fieldset {
     width: 50%;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 legend {
